# fastapi-speedup

./: .gitignore  README.md  app_deps_benchmark.py  app_ok.py  app_sentry_benchmark.py  docker-compose.yml  pyproject.toml  seed_clinic.py  sentry_mock_server.py
bench_clinic/: app_clinic_bench_async.py  app_clinic_bench_asyncpg.py  app_clinic_bench_asyncpg_asgi.py  app_clinic_bench_asyncpg_no_di.py  app_clinic_bench_asyncpg_starlette.py  app_clinic_bench_sync.py
bench_orm/: benchmark_async_orm.py  benchmark_sync_orm.py  scenario_django.py  scenario_peewee.py  scenario_piccolo.py  scenario_tortoise.py
